--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "nodejs-hack-template",
+    "name": "self-destroy-notes",
     "version": "1.0.0",
     "private": true,
     "scripts": {
