--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
     "name": "self-destroy-notes",
     "version": "1.0.0",
     "private": true,
+    "main": "app.js",
     "scripts": {
-        "start": "node app.js"
+        "start": "node ./app.js"
     },
     "dependencies": {
         "body-parser": "~1.17.1",
