--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "scripts": {
         "start": "node ./app.js"
     },
+    "engines": {
+        "node": "6.11.2"
+    },
     "dependencies": {
         "body-parser": "~1.17.1",
         "cookie-parser": "~1.4.3",
